--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14",
+    "sweetalert2": "^11.17.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
